# talw

./: .gitignore  Cargo.toml  README.md  flake.nix  input.css  package-lock.json  package.json  rustc-ice-2024-07-31T22_24_55-248283.txt  tailwind.config.js
migrations/: 20230925000001_create_user_table.sql  20230926000001_create_server_table.sql  20230926000002_create_member_table.sql  20230926000003_create_channel_table.sql  20230926000004_create_conversation_table.sql  20240111000001_create_category_table.sql  20240111000002_add_category_id_to_channel.sql  20240515000001_extend_enum_for_channel.sql  20240715000001_add_image_url_to_server.sql  20240715000002_add_image_url_to_user.sql  20240902000002_add_name_to_member.sql  20240905000001_add_image_url_to_member.sql  20240905000002_remove_member_role_column.sql  20240905000003_create_role_table.sql  20240905000004_create_member_roles.sql  20240905000005_add_owner_column_to_server.sql  20240905000006_add_about_column_to_member.sql  20240905000007_add_about_column_to_user.sql  20240909000001_add_priority_column_to_roles.sql  20240912000001_add_topic_column_to_channel.sql  20240913000001_create_thread_table.sql  20240919000001_create_thread_members_table.sql  20241113000001_remove_about_and_image_url_from_member.sql  20241118000001_create_banner_table.sql  20241127000001_remove_image_url_and_about_from_user.sql  20241127000002_create_profile_table.sql  20241211000001_add_image_key_to_profile_banner_and_server_.sql  20250207000001_add_user_permissions.sql  20250428000001_add_member_status_column.sql  20250429000001_add_member_role_column.sql  20250429000002_add_member_name_column.sql  20250429000003_add_member_image_url_column.sql  20250430000001_create_member_with_fallback_view.sql  20250505000001_create_channel_message_table.sql  20250505000002_create_channel_message_mentions_table.sql  20250505000003_create_channel_message_role_mentions_table.sql  20250505000004_create_attachments_table.sql  20250505000005_create_channel_message_attachments_table.sql  20250505000006_create_embeds_table.sql  20250505000007_create_channel_message_embeds_table.sql  (+4 more)
src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs  messages.rs  msg_sender.rs  state.rs  subs.rs  topic.rs  user.rs  ws.rs
src/app/: auth.rs  mod.rs  server.rs  theme.rs
src/app/api/: auth.rs  category.rs  channel.rs  member.rs  messages.rs  mod.rs  server.rs  theme.rs  thread.rs  uploadthing.rs  user.rs
src/app/components/: mod.rs  portal.rs  theme.rs  thread.rs
src/app/components/channel/: header.rs  members_sidebar.rs  mod.rs
src/app/components/channel/header/: mod.rs  pinned.rs  thread_menu.rs  title.rs
src/app/components/channel/member/: banner.rs
src/app/components/channel/sidebars/: collapsible.rs  group.rs  member.rs  members.rs  mod.rs  profile.rs  server.rs  thread.rs
src/app/components/chat/: content.rs  drop.rs  input.rs  mod.rs
src/app/components/chat/messages/: menu.rs  message.rs  mod.rs  pin.rs  reaction.rs
src/app/components/chat/sender/: attachments.rs  input.rs  mod.rs  reference.rs
src/app/components/collapsible/: mod.rs
src/app/components/create_category/: mod.rs
src/app/components/create_channel/: mod.rs
src/app/components/create_server/: create_server_trigger.rs  join_with_invitation.rs  mod.rs  select_name.rs  select_template.rs
src/app/components/delete_category/: mod.rs
src/app/components/delete_channel/: mod.rs
src/app/components/edit_category/: mod.rs
src/app/components/edit_channel/: mod.rs
src/app/components/invite_people/: mod.rs
src/app/components/leave_server/: mod.rs
src/app/components/menu/: thread.rs
src/app/components/modal/: mod.rs
src/app/components/modal/change_password/: mod.rs
src/app/components/modal/create_category/: mod.rs
src/app/components/modal/create_channel/: mod.rs
src/app/components/modal/create_server/: join_with_invitation.rs  mod.rs  select_name.rs  select_template.rs
src/app/components/modal/create_thread/: mod.rs
src/app/components/modal/delete_category/: mod.rs
src/app/components/modal/delete_channel/: mod.rs
src/app/components/modal/delete_thread/: mod.rs
src/app/components/modal/edit_category/: mod.rs
src/app/components/modal/edit_channel/: mod.rs
src/app/components/modal/invite_people/: mod.rs
src/app/components/modal/leave_server/: mod.rs
src/app/components/modals/: create_server.rs  mod.rs  slide_modal.rs
src/app/components/modals/create_server/: join_with_invitation.rs  select_name.rs
src/app/components/navigation/: context_server_menu.rs  item.rs  mod.rs  navbar.rs  server_sidebar.rs  sidebar.rs
src/app/components/navigation/server/: category.rs  channel.rs  invite_people.rs  mod.rs  server_menu.rs  sidebar.rs  thread.rs
src/app/components/navigation/sidebar/: inbox.rs  mod.rs  profile.rs  search.rs  servers.rs
src/app/components/overview/: mod.rs
src/app/components/overview/server/: mod.rs  sidebar.rs
src/app/components/overview/user/: mod.rs  sidebar.rs
src/app/components/thread/: mod.rs
src/app/components/thread/sidebar/: mod.rs
src/app/components/tool_tip/: mod.rs
src/app/components/ui/: mod.rs
src/app/components/ui/collapsible/: mod.rs
src/app/components/ui/context_menu/: mod.rs
src/app/components/ui/dropdown_menu/: mod.rs
src/app/components/uploadthings/: drop.rs  input.rs  mod.rs
src/app/routes/: home.rs  login.rs  mod.rs  server.rs  signup.rs
src/app/routes/servers/: channel.rs  empty_server.rs  mod.rs  server.rs  thread.rs
src/app/stores/: mod.rs
src/app/sync/: mod.rs  subscriptions.rs  ws.rs
src/entities/: category.rs  channel.rs  member.rs  message.rs  mod.rs  role.rs  server.rs  thread.rs  user.rs
src/messages/: mod.rs  server.rs
src/msg_broker/: mod.rs
src/open_graph/: mod.rs
src/state/: mod.rs
src/sync/: connections.rs  mod.rs  router.rs  subs.rs
src/uploadthing/: file_status.rs  list_files.rs  mod.rs  upload_file.rs
src/uploadthing/server/: list_files.rs  mod.rs  upload_file.rs
src/ws/: mod.rs
src/ws/client/: mod.rs
src/ws/server/: mod.rs
style/: output.css
(+32 files in other folders)
