[package]
name = "start-axum"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", optional = true, features = ["ws", "macros"] }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = "1"
cfg-if = "1"
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
log = "0.4"
simple_logger = "5"
tokio = { version = "1", optional = true, features = ["full"] }
tower = { version = "0.5", optional = true, features = ["util"] }
tower-http = { version = "0.6", features = ["fs"], optional = true }
wasm-bindgen = { version = "=0.2.100" }
thiserror = "2.0"
tracing = { version = "0.1.37", optional = true }
http = "1"
tower-cookies = { version = " 0.11.0", optional = true }
serde = { version = "1.0.164", features = ["derive"] }
web-sys = { version = "0.3", features = [
  "EventListenerOptions",
  "HtmlDocument",
  "Clipboard",
  "Navigator",
  "Element",
  "DomRect",
  "Blob",
] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
  "uuid",
], optional = true }
axum_session_auth = { version = "0.16.0", features = [], optional = true }
axum_session = { version = "0.16.0", features = [], optional = true }
axum_session_sqlx = { version = "0.5.0", features = [
  "mysql",
  "tls-rustls",
], optional = true }
async-trait = { version = "0.1.0", optional = true }
anyhow = "1.0.71"
bcrypt = { version = "0.17.0", optional = true }
dotenvy = "0.15.7"
futures = "0.3.28"
gloo-net = "0.6.0"
async-broadcast = "0.7"
rand = { version = "0.9.0", optional = true }
serde_json = "1.0.107"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4.31", features = ["serde"] }
# leptos_icons = { version = "0.5" }
# icondata = "0.5.0"
strum = { version = "0.27", features = ["derive", "strum_macros"] }
strum_macros = "0.27"
leptos-use = "0.16.0-beta"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
server_fn = { version = "0.8.0-rc1", features = ["multipart"] }
multer = "3.1.0"
tokio-util = { version = "0.7.11", optional = true }
urlencoding = "2.1.3"
gloo-timers = "0.3.0"
dashmap = "6.1.0"
reactive_stores = "0.2.0-rc1"

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook"]
ssr = [
  "dep:axum_session_sqlx",
  "dep:rand",
  "dep:axum",
  "dep:async-trait",
  "dep:tokio",
  "dep:tokio-util",
  "dep:tower",
  "dep:tower-http",
  "dep:tower-cookies",
  "dep:leptos_axum",
  "dep:sqlx",
  "dep:axum_session",
  "dep:axum_session_auth",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-use/ssr",
  "dep:tracing",
  "dep:bcrypt",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "TALW"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/output.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
tailwind-input-file = "input.css"
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

lib-profile-release = "wasm-release"
